[project]
name = "main-packages"
version = "1.7.0"
description = "poetry requirements creation"
authors = [{"name" = "Dmitry Afanasyev", "email" = "Balshbox@gmail.com"}]
requires-python = ">=3.13,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aiohttp = "^3.11"
alembic = "^1.14"
bcrypt = "^4.2"
celery = "^5.4"
click = "^8.1"
cookiecutter = "^2.6"
decorator = "^5.1"
Django = "^5.1"
factory-boy = "^3.3"
Faker = "^33"
fastapi = "^0.115"
gunicorn = "^23.0"
httpx = "^0.28"
Jinja2 = "^3.1"
loguru = "^0.7"
MouseInfo = "0.1"
numpy = "^2.2"
orjson = "^3.10"
Pillow = "^11.1"
pre-commit = "^4.0"
prompt-toolkit = "^3.0"
psycopg2-binary = "^2.9"
PyAutoGUI = "^0.9"
pydantic = "^2.10"
Pygments = "^2.19"
pyinstaller = "^6.11"
PyQt6 = "^6.8"
python-decouple = "^3.8"
pytz = "^2024.1"
redis = {version = "^5.2", extras = ["asyncio"]}
requests = "^2.32"
selenium = "^4.27"
simple-term-menu = "^1.6"
six = "^1.17"
SQLAlchemy = {version = "^2.0", extras = ["asyncio"]}
termcolor = "^2.5"
uvicorn = "^0.34"
validators = "^0.34"
virtualenv = "^20.28"
wget = "^3.2"
zipp = "^3.21"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31"

black = "^24.4"
mypy = "^1.14"

autoflake = "^2.3"
flake8 = "^7.1"
flake8-logging-format = "^2024.24.12"
flake8-comprehensions = "^3.14"
flake8-eradicate = "^1.5"
flake8-deprecated = "^2.2"
flake8-pytest-style = "^2.1"
flake8-aaa = "^0.17"
flake8-bugbear = "^24.12"
flake8-warnings = "^0.4"
flake8-debugger = "^4.1"
flake8-annotations-complexity = "^0.0.8"
flake8-fixme = "^1.1"
flake8-simplify = "^0.21"
flake8-variables-names = "^0.0.6"
flake8-bandit = "^4.1"
flake8-tidy-imports = "^4.10"
flake8-noqa = "^1.4"
flake8-useless-assert = "^0.4"
flake8-mock = "^0.4"
flake8-comments = "^0.1"
flake8-newspaper-style = "^0.4"
Flake8-pyproject = "^1.2.3"

pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-deadfixtures = "^2.2"
pytest-repeat = "^0.9"
pytest-mock = "^3.14"
pytest-cov = "^6.0"
pytest-timeout = "^2.3"
pytest-timeouts = "^1.2"
pytest-sugar = "^1.0"
pytest-clarity = "^1.0"
pytest-env = "^1.1"
nest-asyncio = "^1.6"
pytest-html = "^4.1"
pytest-randomly = "^3.15"
pytest-split = "^0.10"
pytest-freezegun = "^0.4"
pytest-socket = "^0.7"
assertpy = "^1.1"
respx = "^0.22"

safety = "^3.2"
pip-audit = "^2.7"

ruff = "^0.9"
