[tool.poetry]
name = "main packages"
version = "1.0.2"
description = "poetry requiremts creation"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
Python="^3.11"
aiohttp = "^3.8"
aiosignal = "^1.3"
alembic = "^1.11"
bcrypt = "^4.0"
celery = "^5.3"
click = "^8.1"
cookiecutter = "^2.3"
decorator = "^5.1"
Django = "^4.2"
factory-boy = "^3.3"
Faker = "^19.0"
fastapi = "^0.101"
gunicorn = "^21.2"
httpx = "^0.24"
Jinja2 = "^3.1"
loguru = "^0.7"
MouseInfo = "0.1"
numpy = "^1.25"
orjson = "^3.9"
Pillow = "^10.0"
pre-commit = "^2.21"
prompt-toolkit = "^3.0"
psycopg2-binary = "^2.9"
PyAutoGUI = "^0.9"
pydantic = "^1.10"
Pygments = "^2.14"
pyinstaller = "^5.7"
PyQt6 = "^6.4"
python-decouple = "^3.7"
pytz = "^2022.7.1"
redis = {version = "^4.4.1", extras = ["asyncio"]}
requests = "^2.28"
selenium = "^4.7"
simple-term-menu = "^1.6"
six = "^1.16"
SQLAlchemy = "^1.4"
SQLAlchemy-Utils = "^0.38.2"
termcolor = "^2.2"
uvicorn = "^0.20"
validators = "^0.20"
virtualenv = "^20.17"
wget = "^3.2"
zipp = "^3.11"

[tool.poetry.dev-dependencies]
black = "^22.12"
coverage = "^7.0"
flake8 = "^6.0"
ipython = "^8.8"
mypy = "^0.991"
pytest = "^7.2"
pytest-cov = "^4.0"
safety = "^2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
