[tool.poetry]
name = "main packages"
version = "1.0.2"
description = "poetry requiremts creation"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
Python="^3.11"
aiohttp = "^3.8"
loguru = "^0.7"
requests = "^2.31"

[tool.poetry.dev-dependencies]
ipython = "^8.14"

black = "^23.7"
mypy = "^1.5"
flake8 = "^6.1"

pytest = "^7.4"
coverage = "^7.3"

safety = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
