[tool.poetry]
name = "main packages"
version = "1.1.2"
description = "poetry requiremts creation"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
Python="^3.12"
aiohttp = "^3.9"
loguru = "^0.7"
requests = "^2.31"

[tool.poetry.dev-dependencies]
ipython = "^8.14"

black = "^24.2"
mypy = "^1.9"
flake8 = "^7.0"

pytest = "^8.0"
coverage = "^7.3"

safety = "^2"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
